# cryodb-paper-parser

./:  .env.example  .env.example  .gitignore  README.md  pyproject.toml
database/tables_backup/: cpas.sql  db_all_tables.sql  formulations_experiments.sql  papers_table.sql  views.sql
examples/: pmids.txt
source/: extractor.py  gemini_prompt.txt  gemini_prompt_xml.txt  gpt_prompt.txt  schema.json
source/distiller/: papers_table.sql  postgres_connection.py
source/distiller/llama_parse/: extractor.py
source/distiller/mistral_ocr/: cpa_facts.py  extractor.py  gpt_cpa_facts.py  update_metadata.py
source/distiller/pmc/: get_cpa_facts.py  get_papers.py
source/distiller/schemas/: cpa_chemical.py  extraction_passes.py  papers.py  pipeline_config.py  playground_config.py  structured_output.py
source/distiller/utils/: db_utils.py  file_utils.py  llm_extraction.py  s3_utils.py
source/metrics/: config.json  eval.py
source/metrics/references/: example.json
source/pipelines/: pipeline_orchestration.py
source/pipelines/extract/: llama_parse.py
source/pipelines/ingest/: merge_agents.py  staging.py
source/pipelines/post_processing/: agent_property_ingest.py  cpa_ingest.py  experiment_ingest.py  formulation_ingest.py
source/pipelines/utils/: embeddings.py  molecule_pass.py  paper_utils.py  pipeline_utils.py
source/prompts/: agent_prompt.j2  agent_property_prompt.j2  evaluation.j2
source/prompts/experiment_extraction/: v4_experiment_prompt.j2
source/prompts/formulation_extraction/: v5_formulation_prompt.j2
(+2 files in other folders)
