[project]
name = "cryorepo-paper-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Sviridov"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-generativeai (>=0.8.5,<0.9.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jsonschema (>=4.25.0,<5.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "boto3 (>=1.39.9,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "mistralai (>=1.9.2,<2.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "llama-cloud-services (>=0.6.51,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
